[gd_scene load_steps=6 format=2]

[ext_resource path="res://TextBTN_Big.png" type="Texture" id=1]
[ext_resource path="res://Enchanted Land.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://TextBTN_Big_Pressed.png" type="Texture" id=3]
[ext_resource path="res://start_button.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 75
outline_size = 4
outline_color = Color( 0.160784, 0.156863, 0.156863, 1 )
font_data = ExtResource( 2 )

[node name="start_button" type="Node2D"]
script = ExtResource( 4 )

[node name="TextureButton" type="TextureButton" parent="."]
margin_right = 40.0
margin_bottom = 40.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Node2D" type="Node2D" parent="."]
z_index = 3

[node name="start_up" type="RichTextLabel" parent="Node2D"]
margin_left = 61.0024
margin_top = 1.36997
margin_right = 380.002
margin_bottom = 86.37
mouse_filter = 2
custom_fonts/normal_font = SubResource( 1 )
text = " START"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="start_down" type="RichTextLabel" parent="Node2D"]
visible = false
margin_left = 69.9692
margin_top = 23.551
margin_right = 388.969
margin_bottom = 108.551
mouse_filter = 2
custom_fonts/normal_font = SubResource( 1 )
custom_colors/default_color = Color( 0.647059, 0.647059, 0.647059, 1 )
text = "START"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25
[connection signal="button_down" from="TextureButton" to="." method="_on_TextureButton_button_down"]
[connection signal="button_up" from="TextureButton" to="." method="_on_TextureButton_button_up"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
